--- a/.travis.yml
+++ b/.travis.yml
@@ -5,8 +5,8 @@
 language: objective-c
 # cache: cocoapods
 # podfile: Example/Podfile
-# before_install:
-# - gem install cocoapods # Since Travis is not always on latest version
+  before_install:
+  - gem install cocoapods # Since Travis is not always on latest version
 # - pod install --project-directory=Example
 script:
 - set -o pipefail && xcodebuild test -workspace Example/ExponentialBackOff.xcworkspace -scheme ExponentialBackOff-Example -sdk iphonesimulator ONLY_ACTIVE_ARCH=NO | xcpretty
