--- a/.travis.yml
+++ b/.travis.yml
@@ -6,8 +6,9 @@ language: objective-c
 # cache: cocoapods
 # podfile: Example/Podfile
 before_install:
+  - rvm install ruby-2.2.2
   - rvm use ruby-2.2.2
-  - gem install cocoapods # Since Travis is not always on latest version
+  - gem install cocoapods --no-ri --no-rdoc # Since Travis is not always on latest version
 # - pod install --project-directory=Example
 script:
 - set -o pipefail && xcodebuild test -workspace Example/ExponentialBackOff.xcworkspace -scheme ExponentialBackOff-Example -sdk iphonesimulator ONLY_ACTIVE_ARCH=NO | xcpretty
