--- a/.travis.yml
+++ b/.travis.yml
@@ -11,5 +11,5 @@ before_install:
   - gem install cocoapods --no-ri --no-rdoc # Since Travis is not always on latest version
 # - pod install --project-directory=Example
 script:
-- set -o pipefail && xcodebuild test -workspace Example/ExponentialBackOff.xcworkspace -scheme ExponentialBackOff-Example -sdk iphonesimulator -d 'iOS Simulator' ONLY_ACTIVE_ARCH=NO | xcpretty
+- set -o pipefail && xcodebuild test -workspace Example/ExponentialBackOff.xcworkspace -scheme ExponentialBackOff-Example -sdk iphonesimulator9.2 ONLY_ACTIVE_ARCH=NO | xcpretty
 - pod lib lint
