--- a/.travis.yml
+++ b/.travis.yml
@@ -6,11 +6,15 @@ language: objective-c
 osx_image: xcode7.2
 # cache: cocoapods
 # podfile: Example/Podfile
+xcode_workspace: Example/ExponentialBackOff.xcworkspace
+xcode_scheme: ExponentialBackOff-Example
 before_install:
   - rvm install ruby-2.2.2
   - rvm use ruby-2.2.2
   - gem install cocoapods --no-ri --no-rdoc # Since Travis is not always on latest version
 # - pod install --project-directory=Example
-script:
-- set -o pipefail && xcodebuild test -workspace Example/ExponentialBackOff.xcworkspace -scheme ExponentialBackOff-Example -sdk iphonesimulator9.2 ONLY_ACTIVE_ARCH=NO | xcpretty
-- pod lib lint
+# script:
+# - set -o pipefail && xcodebuild test -workspace Example/ExponentialBackOff.xcworkspace -scheme ExponentialBackOff-Example -sdk iphonesimulator9.2 ONLY_ACTIVE_ARCH=NO | xcpretty
+# - pod lib lint
+after_script:
+  - pod lib lint
