--- a/.travis.yml
+++ b/.travis.yml
@@ -8,6 +8,7 @@ osx_image: xcode7.2
 # podfile: Example/Podfile
 xcode_workspace: Example/ExponentialBackOff.xcworkspace
 xcode_scheme: ExponentialBackOff-Example
+xcode_sdk: iphonesimulator9.2
 before_install:
   - rvm install ruby-2.2.2
   - rvm use ruby-2.2.2
