--- a/ExponentialBackOff/Podfile
+++ b/ExponentialBackOff/Podfile
@@ -1,9 +1,9 @@
 # Uncomment this line to define a global platform for your project
-platform :ios, '8.0'
+platform :ios, '12.0'
 # Uncomment this line if you're using Swift
 use_frameworks!
 
 target 'ExponentialBackOff' do
-  pod 'AsyncSwift', '~> 2.0'
+  pod 'AsyncSwift', :git => 'https://github.com/duemunk/Async.git'
 end
 
