--- a/Example/Podfile
+++ b/Example/Podfile
@@ -1,4 +1,6 @@
-source 'https://github.com/CocoaPods/Specs.git'
+# Uncomment this line to define a global platform for your project
+platform :ios, '12.0'
+# Uncomment this line if you're using Swift
 use_frameworks!
 
 target 'ExponentialBackOff_Example' do
@@ -6,8 +8,8 @@ target 'ExponentialBackOff_Example' do
 
   target 'ExponentialBackOff_Tests' do
     inherit! :search_paths
-
-    pod 'Quick', '~> 1.0'
-    pod 'Nimble', '~> 5.1'
+    pod 'AsyncSwift', :git => 'https://github.com/duemunk/Async.git'
+    pod 'Quick', '~> 5.0'
+    pod 'Nimble', '~> 10.0'
   end
 end
